# SnakeGame

./: CMakeLists.txt  README.md  controller.cpp  controller.hpp  main.cc  model.hpp  view.cpp  view.hpp
include/: Controller.hpp  Gecko.hpp  Model.hpp  Snake.hpp  TextVisual.hpp  View.hpp
include/controller/: Controller.hpp  Scoreboard.hpp
include/model/: Model.hpp  Snake.hpp
include/view/: GraphicVisual.hpp  TextVisual.hpp  View.hpp
src/: CMakeLists.txt  Controller.cpp  Model.cpp  Snake.cpp  TextVisual.cpp  main.cpp
src/controller/: Controller.cpp
src/model/: Model.cpp  Snake.cpp
src/view/: GraphicVisual.cpp  TextVisual.cpp
